# active_vision_grasping

./: .gitignore  README.md  frames_2022-10-13_22.57.43.gv  notes  vtk_version.py
src/py_srvcli/: package.xml  setup.py
src/py_srvcli/py_srvcli/: client_one.py  service_one.py  tf_broadcaster.py
src/segmentation/: CMakeLists.txt  package.xml
src/segmentation/config/: gazebo_controllers.yaml
src/segmentation/gazebo/: camera.gazebo.xacro
src/segmentation/launch/: simulation.launch.py  simulation_can.launch.py
src/segmentation/ros2_control/: camera.ros2_control.xacro
src/segmentation/src/: CMakeLists.txt  normal.cpp  position_controller.cpp  segmentation.cpp  stitch.cpp  test_stitch.cpp  test_tf.cpp
src/segmentation/urdf/: camera.urdf  camera.urdf.xacro  rbot.urdf.xacro  test.camera.urdf
src/segmentation/worlds/: object_with_table.world  simulation.world
src/vbm_project_env/: CMakeLists.txt
src/vbm_project_env/launch/: simulation.launch.py  simulation_can.launch.py
src/vbm_project_env/src/: segmentation.cpp  test.cpp
src/vbm_project_env/worlds/: can_world.world  object_with_table.world  simulation.world
vbm_project_env/launch/: simulation.launch.py
vbm_project_env/src/: segmentation.cpp
vbm_project_env/worlds/: simulation.world
